--- a/app/package.json
+++ b/app/package.json
@@ -6,17 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "maplibre-gl": "^5.0.1",
     "pinia": "^2.3.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.6.2",
+    "gh-pages": "^6.3.0",
     "unocss": "^65.4.0",
     "vite": "^6.0.5",
     "vue-tsc": "^2.2.0"
