--- a/app/package.json
+++ b/app/package.json
@@ -1,11 +1,11 @@
 {
   "name": "app",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
@@ -17,10 +17,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/tsconfig": "^0.7.0",
     "gh-pages": "^6.3.0",
     "unocss": "^65.4.0",
-    "vite": "^6.0.5",
-    "vue-tsc": "^2.2.0"
+    "vite": "^6.0.5"
   }
 }
