--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Trigger deployment on changes to the 'main' branch
+      - deploy  # Trigger deployment on changes to the 'main' branch
 
 jobs:
   build:
@@ -31,4 +31,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}  # This token is automatically provided by GitHub
           publish_dir: ./dist  # Path to the build output directory
-          publish_branch: gh-pages  # Name of the branch to deploy to
+          publish_branch: deploy  # Name of the branch to deploy to
