--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci  # Use 'npm ci' to install dependencies from package-lock.json
+          npm install # Use 'npm ci' to install dependencies from package-lock.json
 
       - name: Build the project
         run: |
