--- a/app/vercel.json
+++ b/app/vercel.json
@@ -1,5 +1,3 @@
 {
-  "rewrites": [
-    { "source": "/map", "destination": "/" }
-  ]
+  "rewrites": [{ "source": "/:path*", "destination": "/index.html" }]
 }
