--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "git": "vite build & gh-pages -d dist"
   },
   "dependencies": {
+    "@vueuse/core": "^12.4.0",
     "maplibre-gl": "^5.0.1",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
