--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
     "@vueuse/core": "^12.4.0",
     "maplibre-gl": "^5.0.1",
     "pinia": "^2.3.0",
+    "terra-draw": "^1.0.0",
+    "terra-draw-maplibre-gl-adapter": "^1.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
