--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,8 @@
     "@webzlodimir/vue-bottom-sheet": "^3.0.5",
     "maplibre-gl": "^5.0.1",
     "pinia": "^2.3.0",
+    "sass": "^1.84.0",
+    "sass-loader": "^16.0.4",
     "terra-draw": "^1.0.0",
     "terra-draw-maplibre-gl-adapter": "^1.0.1",
     "vue": "^3.5.13",
