--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "git": "vite build & gh-pages -d dist"
   },
   "dependencies": {
+    "@mapbox/maki": "^8.0.1",
     "@mdi/font": "^7.4.47",
     "@vueuse/core": "^12.4.0",
     "@webzlodimir/vue-bottom-sheet": "^3.0.5",
