--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,6 @@
     "git": "vite build & gh-pages -d dist"
   },
   "dependencies": {
-    "@mapbox/maki": "^8.0.1",
     "@mdi/font": "^7.4.47",
     "@vueuse/core": "^12.4.0",
     "@webzlodimir/vue-bottom-sheet": "^3.0.5",
@@ -27,9 +26,11 @@
     "vuetify": "^3.7.11"
   },
   "devDependencies": {
+    "@mapbox/maki": "^8.0.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "gh-pages": "^6.3.0",
     "jsonminify": "^0.4.2",
+    "sharp": "^0.33.5",
     "vite": "^6.0.5"
   }
 }
