--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "^7.4.47",
     "@vueuse/core": "^12.4.0",
     "@webzlodimir/vue-bottom-sheet": "^3.0.5",
+    "echarts": "^5.6.0",
     "maplibre-gl": "^5.0.1",
     "pinia": "^2.3.0",
     "sass": "^1.84.0",
@@ -22,6 +23,7 @@
     "terra-draw": "^1.0.0",
     "terra-draw-maplibre-gl-adapter": "^1.0.1",
     "vue": "^3.5.13",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.11"
   },
