elevation profile - test on mobile if it can handle it :)

--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,12 @@
     "@mdi/font": "^7.4.47",
     "@vueuse/core": "^14.1.0",
     "@webzlodimir/vue-bottom-sheet": "^3.0.5",
+    "d3-array": "^3.2.4",
+    "d3-axis": "^3.0.0",
+    "d3-brush": "^3.0.0",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "echarts": "^6.0.0",
     "maplibre-gl": "^5.13.0",
     "pinia": "^3.0.4",
