--- a/app/package.json
+++ b/app/package.json
@@ -15,23 +15,21 @@
     "@douxcode/vue-spring-bottom-sheet": "^2.5.0",
     "@mdi/font": "^7.4.47",
     "@vueuse/core": "^14.1.0",
-    "@webzlodimir/vue-bottom-sheet": "^3.0.5",
     "d3-array": "^3.2.4",
     "d3-axis": "^3.0.0",
     "d3-brush": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
-    "echarts": "^6.0.0",
     "maplibre-gl": "^5.13.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
-    "vue-echarts": "^8.0.1",
     "vue-router": "^4.6.3",
     "vuetify": "^3.11.0"
   },
   "devDependencies": {
     "@mapbox/maki": "^8.2.0",
+    "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^6.0.2",
     "sass-embedded": "^1.93.3",
     "sharp": "^0.34.5",
